# aoc

./: .gitignore  aoc.cabal  flake.nix
src/2015/: day1.hs
src/2015/day1/: Main.hs
src/2015/day2/: Main.hs  Present.hs
src/2015/day3/: Direction.hs  Main.hs
src/2015/day5/: Main.hs
src/2022/day2/: Outcome.hs
src/2022/day3/: Main.hs
src/2022/day4/: Main.hs
src/2024/day1/: Main.hs
src/2024/day2/: Main.hs
src/2024/day3/: Instruction.hs  Main.hs
