cabal-version:      3.8
name:               aoc
version:            0.1.0.0

synopsis:   My attempt at completing the entirety of Advent of Code
author:     Gabriel Fontes
maintainer: hi@m7.rs
license:    Unlicense

executable y2015-d1
    main-is:          Main.hs
    ghc-options:      -Wall
    hs-source-dirs:   src/2015/day1
    default-language: GHC2021
    build-depends:    base ^>= 4.18

executable y2015-d2
    main-is:          Main.hs
    ghc-options:      -Wall
    hs-source-dirs:   src/2015/day2
    default-language: GHC2021
    other-modules:    Present
    build-depends:    base ^>= 4.18, split >= 0.2

executable y2015-d3
    main-is:          Main.hs
    ghc-options:      -Wall
    hs-source-dirs:   src/2015/day3
    default-language: GHC2021
    other-modules:    Direction
    build-depends:    base ^>= 4.18

executable y2015-d5
    main-is:          Main.hs
    ghc-options:      -Wall
    hs-source-dirs:   src/2015/day5
    default-language: GHC2021
    build-depends:    base ^>= 4.18

executable y2022-d1
    main-is:          Main.hs
    ghc-options:      -Wall
    hs-source-dirs:   src/2022/day1
    default-language: GHC2021
    build-depends:    base ^>= 4.18, split ^>= 0.2

executable y2022-d2
    main-is:          Main.hs
    ghc-options:      -Wall
    hs-source-dirs:   src/2022/day2
    default-language: GHC2021
    other-modules:    Outcome, Shape
    build-depends:    base ^>= 4.18, split ^>= 0.2

executable y2022-d3
    main-is:          Main.hs
    ghc-options:      -Wall
    hs-source-dirs:   src/2022/day3
    default-language: GHC2021
    build-depends:    base ^>= 4.18, split ^>= 0.2

executable y2022-d4
    main-is:          Main.hs
    ghc-options:      -Wall
    hs-source-dirs:   src/2022/day4
    default-language: GHC2021
    build-depends:    base ^>= 4.18, split ^>= 0.2

executable y2024-d1
    main-is:          Main.hs
    ghc-options:      -Wall
    hs-source-dirs:   src/2024/day1
    default-language: GHC2021
    build-depends:    base ^>= 4.18

executable y2024-d2
    main-is:          Main.hs
    ghc-options:      -Wall
    hs-source-dirs:   src/2024/day2
    default-language: GHC2021
    build-depends:    base ^>= 4.18

executable y2024-d3
    main-is:          Main.hs
    ghc-options:      -Wall
    hs-source-dirs:   src/2024/day3
    default-language: GHC2021
    other-modules:    Instruction
    build-depends:    base ^>= 4.18, regex-tdfa ^>= 1.3
